fix style overflow in home

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -12,8 +12,8 @@
     background-color: rgb(194, 216, 236);
     // border: red solid 1px;
     z-index: 20;
-    position: absolute;
-    top: 200px;
+    position: fixed;
+    // top: 200px;
     box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.04);
     padding: 2rem;
     border-radius: 1rem;
