--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -11,7 +11,7 @@
     gap: 2rem;
     align-items: center;
     height: 100vh;
-    justify-content: space-around;
+    justify-content: space-evenly;
     // height: 10rem;
     width: 100%;
 
@@ -157,6 +157,8 @@
         // border: white solid 1.5px;
         // filter: brightness(20%);
         border: none;
+        color: $primary-background;
+        font-weight: 500;
         transition: 0.3s all;
         // stroke-dashoffset: -480;
         &:hover {
