--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -45,6 +45,11 @@
     border: none;
     border-bottom: 1px solid  $primary-background;
     transition: all 0.2s;
+
+    &::placeholder {
+      color: rgb(42, 37, 37);
+    }
+
     &:hover {
       // outline: $primary-background solid 1px;
       background-color: rgb(248, 243, 237);
